hphp/test/zend/bad/access_modifiers_002.php
<?php

class test {
	static public public static final public final $var;
}

echo "Done\n";
?>